--- a/resources/unpacked/options.html
+++ b/resources/unpacked/options.html
@@ -4,7 +4,7 @@
 <body>
 
 Favorite color:
-<select id="internal">
+<select id="interval">
  <option value=1>1 min</option>
  <option value=15>15 min</option>
  <option value=60>1 hour</option>
